add sdk